# nlos-sensor-fusion

./: .gitignore  Documentation.md  README.md  _check_log.py  _test_gt.py  _test_playback_gt.py  cameras.py  capture_config.py  capture_mmwave.py  capture_uwb.py  check_depths.py  device_roles.json  full_capture.py  get_device_id.py  ground_truth.py  playback.py  plot_debug.py  plot_synced.py  plot_uwb_live.py  pose_estimation.py  reconstruct_scene.py  requirements.txt  run_colmap.py  run_writer.py  sync_data.py  test_spad.py  test_uwb_rx_diff.py  train.py  uwb_cir_plotter.py  uwb_pans_reader.py
spad_center/: .gitignore  .pre-commit-config.yaml  README.md  capture_spad.py  capture_spad_calibration.py  capture_spad_nlos.py  capture_spad_sequential.py  capture_visualize.ipynb  docker-compose.yml  pyproject.toml
spad_center/docker/: dev.dockerfile  vnc.dockerfile
spad_center/docker/common/: base.dockerfile  common.dockerfile
spad_center/docker/snippets/: librealsense2.dockerfile  libsurvive.dockerfile  miniconda.dockerfile
spad_center/examples/: README.md
spad_center/examples/demos/: nlos_spad_and_gantry_demo.py
spad_center/examples/sensors/: README.md  camera_viewer.py  mocap_viewer.py  spad_dashboard.py  spad_dashboard_cli.py
spad_center/examples/spad_capture/: spad_capture_full.py  spad_capture_new.py
spad_center/examples/stepper_motors/: README.md  custom_stepper_system.py  stepper_motor_controller_cli.py  stepper_system_w_spad.py
spad_center/pkgs/algos/: README.md  pyproject.toml
spad_center/pkgs/drivers/: README.md  pyproject.toml
spad_center/pkgs/robot_arm/: align_camera.py  robot_sim.py  ur10_robot.urdf
spad_center/pkgs/tools/: README.md  pyproject.toml
spad_center/pkgs/utils/: README.md  pyproject.toml
spad_center/scripts/: pi_setup.sh
(+151 files in other folders)
